--- a/_assets/scss/layaut.scss
+++ b/_assets/scss/layaut.scss
@@ -29,34 +29,49 @@ body {
   flex-grow: 1;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 20px;
-  max-width: 280px;
-  margin-left: auto;
-  margin-right: auto;
-
-  @media screen and (min-width: $sm) {
-    max-width: 620px;
-  }
-
-  @media screen and (min-width: $lg) {
-    max-width: 940px;
-  }
-}
-
 .row {
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0 20px 42px 20px;
+
+  @media screen and (min-width: $sm) {
+    padding: 0;
+  }
 
   @media screen and (min-width: $lg) {
     flex-direction: row;
+  }
+
+  &--sm {
+
+    @media screen and (min-width: $sm) {
+      flex-direction: row;
+      align-items: baseline;
+    }
   }
 }
 
 .col {
   flex-grow: 1;
+
+  &--sm {
+    display: block;
+    text-align: center;
+
+    > span {
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-transform: uppercase;
+      height: 63px;
+
+      @media screen and (min-width: $sm) {
+        display: block;
+        height: auto;
+        text-align: end;
+      }
+    }
+  }
 }
