--- a/_assets/scss/components/form.scss
+++ b/_assets/scss/components/form.scss
@@ -30,6 +30,14 @@ form {
   &__error {
     display: none;
   }
+
+  &__form {
+
+    @media screen and (min-width: $lg) {
+      flex-grow: 1;
+      margin-left: 20px;
+    }
+  }
 }
 
 input[type="text"],
@@ -43,7 +51,7 @@ input[type="email"] {
 }
 
 .c-radio-group,
-.c-checkbox-group{
+.c-checkbox-group {
   display: flex;
   flex-direction: column;
   padding-top: 25px;
@@ -67,6 +75,21 @@ input[type="email"] {
     border-radius: 50%;
   }
 
+  &__label:after {
+    content: "";
+    position: absolute;
+    top: 9px;
+    left: 12px;
+    width: 15px;
+    height: 15px;
+    background-color: transparent;
+    border-radius: 50%;
+  }
+
+  .c-radio__input:checked + .c-radio__label::after {
+    background-color: #d22856;
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
@@ -74,16 +97,63 @@ input[type="email"] {
 
 .c-checkbox {
   height: 40px;
+  position: relative;
+  margin-bottom: 45px;
+  padding-left: 70px;
+
+  &__label:before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: 0;
+    width: 39px;
+    height: 39px;
+    background-color: #ffffff;
+    border: 2px solid #dddfe0;
+  }
+
+  &__label:after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 14px;
+    width: 12px;
+    height: 24px;
+    border-right: 3px solid;
+    border-bottom: 3px solid;
+    transform: rotate(45deg);
+    border-color: transparent;
+  }
+
+  &__input:checked + .c-checkbox__label::after {
+    border-color: #d22856;
+  }
+
 }
 
+
+
 .c-checkbox-group .col {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.c-checkbox-group .col:last-child {
+  margin-bottom: -45px;
+
+  @media screen and (min-width: lg) {
+    margin-bottom: 0;
+  }
 }
 
 textarea {
   width: 100%;
+  height: 200px;
   resize: none;
   border: 2px solid #dddfe0;
   padding: 20px;
+
+  @media screen and (min-width: $lg) {
+    height: 125px;
+  }
 }
