--- a/_assets/scss/components/btn.scss
+++ b/_assets/scss/components/btn.scss
@@ -97,7 +97,7 @@
   background-color: #ffffff;
 }
 
-.btn-submit {
+.btn-success {
   background-color: #2aab6d;
   color: #ffffff;
   text-transform: uppercase;
