--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -1,9 +1,11 @@
 @import "normalize";
 @import "variables";
 @import "fonts";
-@import "layaut";
 @import "base";
+@import "layaut";
+@import "helper";
 @import "icons";
 @import "components/compile";
 @import "pages";
+
 
