--- a/_assets/scss/components/form.scss
+++ b/_assets/scss/components/form.scss
@@ -1,26 +1,13 @@
-/*
-.c-input {
-
-
-  &__form {
-
-    @media screen and (min-width: $lg) {
-      flex-grow: 1;
-      margin-left: 20px;
-    }
-  }
-}
-
-
-
-.c-radio-group,
 .c-checkbox-group {
   display: flex;
   flex-direction: column;
-  padding-top: 25px;
+  align-items: flex-start;
+
+  @media screen and (min-width: $lg) {
+    flex-direction: row;
+    justify-content: space-between ;
+  }
 }
-
-
 
 .c-checkbox {
   height: 40px;
@@ -28,7 +15,12 @@
   margin-bottom: 45px;
   padding-left: 70px;
 
-  &__label:before {
+  @media screen and (min-width: $sm) {
+    padding-left: 60px;
+  }
+
+  &__input {
+    display: block;
     content: "";
     position: absolute;
     top: -2px;
@@ -39,7 +31,7 @@
     border: 2px solid #dddfe0;
   }
 
-  &__label:after {
+  &__input:before {
     content: "";
     position: absolute;
     top: 2px;
@@ -52,35 +44,12 @@
     border-color: transparent;
   }
 
-  &__input:checked + .c-checkbox__label::after {
-    border-color: #d22856;
-  }
+  input[type="checkbox"] {
+    display: none;
 
-}
-
-
-.c-checkbox-group .col {
-  display: flex;
-  flex-direction: column;
-}
-
-.c-checkbox-group .col:last-child {
-  margin-bottom: -45px;
-
-  @media screen and (min-width: lg) {
-    margin-bottom: 0;
-  }
-}
-
-
-*/
-
-.c-checkbox-group {
-  display: flex;
-  flex-direction: column;
-
-  @media screen and (min-width: $sm) {
-    flex-direction: row;
+    &:checked + .c-checkbox__input::before {
+      border-color: #d22856;
+    }
   }
 }
 
@@ -95,6 +64,10 @@
   height: 40px;
   margin-bottom: 35px;
   padding-left: 70px;
+
+  @media screen and (min-width: $sm) {
+    padding-left: 60px;
+  }
 
   &__input {
     display: block;
@@ -177,14 +150,14 @@
       margin-bottom: 50px;
     }
 
-    @media screen and (min-width: $sm) {
+    @media screen and (min-width: $lg) {
       margin-bottom: 55px;
     }
 
     .c-input__label {
 
       @media screen and (min-width: $sm) {
-       margin-left: 0;
+        margin-left: 0;
       }
     }
 
@@ -194,7 +167,14 @@
         flex-grow: 1;
         margin-left: 20px;
       }
+    }
 
+    &:last-child {
+
+      @media screen and (min-width: $lg) {
+        margin-bottom: 0;
+      }
     }
   }
 }
+
