--- a/_assets/scss/layaut.scss
+++ b/_assets/scss/layaut.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
+
   @media screen and (min-width: $lg) {
     max-width: 980px;
     margin-left: auto;
@@ -27,4 +28,18 @@ body {
 
 .main {
   flex-grow: 1;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $lg) {
+    width: 33.33%;
+  }
+
+  &:last-child label:last-child {
+    margin-bottom: 0;
+  }
+
 }
