--- a/_assets/scss/icons.scss
+++ b/_assets/scss/icons.scss
@@ -117,3 +117,21 @@
   height: 12px;
   width: 14px;
 }
+
+.i-mail {
+   display: inline-block;
+   background-image: url("../img/icons/i_mail.png");
+   background-repeat: no-repeat;
+
+   height: 63px;
+   width: 62px;
+ }
+
+.i-phone {
+  display: inline-block;
+  background-image: url("../img/icons/i_phone.png");
+  background-repeat: no-repeat;
+
+  height: 63px;
+  width: 62px;
+}
