--- a/_assets/scss/components/form.scss
+++ b/_assets/scss/components/form.scss
@@ -5,7 +5,7 @@
 
   @media screen and (min-width: $lg) {
     flex-direction: row;
-    justify-content: space-between ;
+    justify-content: space-between;
   }
 }
 
@@ -90,6 +90,7 @@
       background-color: transparent;
       border-radius: 50%;
     }
+
   }
 
   input[type="radio"] {
@@ -121,6 +122,7 @@
     display: none;
   }
 
+
   input[type="text"],
   input[type="tel"],
   input[type="email"] {
@@ -141,6 +143,16 @@
     @media screen and (min-width: $lg) {
       height: 125px;
     }
+  }
+
+  div {
+    position: relative;
+  }
+
+  span {
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 
   &--row {
